# silent-p

./: README.md  balancing_data.ipynb  checkpoint2_model.ipynb  checkpoint_1.ipynb  checkpoint_2.html  checkpoint_2.ipynb  descriptive_stats.ipynb  example_images.ipynb  final_report.ipynb  logistic_regression.py  lr_evaluation.ipynb  model_eval.ipynb  nn_evaluation.ipynb  pyproject.toml  test_model.ipynb
checkpoints/: checkpoint_1.ipynb
data/output/: test.csv  train.csv  val.csv
data/paths/: test.csv  train.csv  val.csv
process/: balancing_data.ipynb  data_module.py  load.py  logistic_regression.py  model.py  transforms.py
provided_notebooks/: Custom_Dataset_DataLoader_DataModule.ipynb  checkpoint2_model.ipynb  working_with_images.ipynb
provided_notebooks/.ipynb_checkpoints/: checkpoint2_model-checkpoint.ipynb
